fix mermaid graph cropping

--- a/packages/website/css/global.css
+++ b/packages/website/css/global.css
@@ -52,6 +52,10 @@ pre > code {
   display: block;
 }
 
+code[class="language-mermaid"] {
+  line-height: normal !important;
+}
+
 ul {
   margin: 0;
 }
